--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,12 @@ body {
 	margin: 0 auto;
 	width: 50%;
 }
+
+ul, li {
+	list-style: none !important;
+	list-style-type: none !important;
+}
+
+ul, li {
+	list-style-type: none !important;
+}
